fixed salt text overflow in japanese

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@
   margin: 2px;
   width: fit-content;
   height: fit-content;
+  min-width: 100px;
 }
 
 .page-break {
